Fixed horizontal scroll

--- a/diversilyze/diversilyze.css
+++ b/diversilyze/diversilyze.css
@@ -22,8 +22,6 @@ body,html {
 	background: #F7F7F7;
 	-webkit-font-smoothing:antialiased;
 	height:100%;
-	/* overflow-x: hidden; Fix for horizontal scroll */
-	overflow: hidden; 
 }
 
 .col-centered {
@@ -59,7 +57,6 @@ body,html {
 }
 
 .analyze-button {
-		/* Rectangle 4: */
 	background: -webkit-linear-gradient(254deg, #F13465 0%, #FF3500 100%);
 	background: -o-linear-gradient(254deg, #F13465 0%, #FF3500 100%);
 	background: linear-gradient(344deg, #F13465 0%, #FF3500 100%);
@@ -81,11 +78,18 @@ body,html {
 }
 
 .album-cover-container {
-	width:80%;
 	position: absolute;
 	bottom: -4.5px;
 	min-width:1500px;
 
+}
+
+.bottom-container-fix {
+	width:100%;
+	height:200px;
+	overflow: hidden;
+	position: absolute;
+	bottom:0;
 }
 
 .album-cover-small {
@@ -93,6 +97,7 @@ body,html {
 	width:120px;
 	bottom:0;
 	margin:0;
+	margin:0 auto;
 	background: #3a3a3a;
 	background-size: cover;
 	display: inline-block;
@@ -128,7 +133,7 @@ body,html {
 .result-chart {
 	border-radius: 50%;
 	margin:0 auto;
-	background-image:url("profilepic.png"); 
+	background-image:url("profile_img.png"); 
 	/* GET FROM SOMETHING LIKE $('#profile-chart').css('background-image', 'url("'+user.img+');') */
 	background-repeat:no-repeat;
 	width:220px;
